fixed adminEquipment styling overlapping with other buttons

--- a/src/frontend/src/pages/styles/AdminEquipment.css
+++ b/src/frontend/src/pages/styles/AdminEquipment.css
@@ -52,15 +52,14 @@
   text-align: center;
 }
 
-.buttons {
-  margin-top: -1rem;
-  margin-left: 8.5rem;
+.buttons-admin {
   position: absolute;
-  
+  margin-top: -1rem;
+  margin-left: 10rem;
 }
 
-.button {
-  margin: 0 10px;
+.button-admin {
+  margin: 0 0.2rem;
 }
 
 .font-admin {
@@ -76,3 +75,11 @@
   flex: 1;
   margin: 0 5px;
 }
+
+@media only screen and (max-width: 768px) {
+  .buttons-admin {
+    margin-left: 4.5rem;
+  }
+}
+
+
